tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@unexpected_token_expr.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/unexpected_token_expr.txt
---
error: Found `,` but expected identifier.
 --> unexpected_token_expr.txt:1:15
  |
1 | {{ a is upper(,) }}
  |               ^
